--- a/pages/ambassador.html
+++ b/pages/ambassador.html
@@ -113,7 +113,7 @@
           <div class="hidden md:flex flex-row justify-center w-1/2">
             <img
               src="../img/ambass2.jpg"
-              class="w-[700px] object-right"
+              class="w-[600px] object-right"
               alt=""
             />
           </div>
@@ -131,36 +131,13 @@
               alt=""
             />
             <p class="text-center text-[20px] font-normal w-full">
-              Welcome to the Seedsnitch Campus Ambassador Program, where we turn
-              boring college students into cool startup ambassadors. As a campus
-              ambassador, you'll have the opportunity to spread the word about
-              Seedsnitch and all the awesome resources we offer to help college
-              students turn their ideas into successful businesses. Imagine
-              being able to say, "I'm a startup ambassador," at parties or on a
-              first date. It's a conversation starter, trust us.<span id="dots"
-                >...</span
-              >
-              <span id="more">
-                But it's not just about impressing your friends; it's also about
-                making a real impact on your campus. You'll have the opportunity
-                to help identify and recruit the next generation of college
-                startup founders, and in return, you'll get to be part of a
-                community of like-minded individuals who are also on the journey
-                of building their own startups, gain valuable experience in the
-                startup world, and earn some extra money (you were finding that,
-                weren't you?). Think of it as a referral program: the more
-                members you bring in, the more rewards you earn. And let's be
-                real, who doesn't love some extra cash? Think of it as a
-                superhero sidekick role: you'll be helping your peers turn their
-                ideas into startups, and in return, you'll earn rewards.</span
-              >
-              <br /><button
-                onclick="myFunction()"
-                id="myBtn"
-                class="rounded-md border bg-[#0C6980] text-white p-1 text-[18px] my-2 py-2"
-              >
-                Read more
-              </button>
+              The Seedsnitch Campus Program is a unique opportunity for college
+              students to get involved with the startup ecosystem and earn
+              exciting rewards. As a campus ambassador, you will be helping your
+              peers turn their ideas into successful ventures by connecting them
+              with the resources and support they need to succeed. With
+              Seedsnitch, you'll be able to help build the next big thing while
+              also earning rewards for each successful referral.
             </p>
           </div>
         </div>
@@ -169,7 +146,7 @@
           class="w-full p-4 flex flex-row-reverse justify-evenly items-center my-8"
         >
           <div class="hidden md:flex flex-row justify-end w-1/2">
-            <img src="../img/img2.jpg" class="w-[700px] object-left" alt="" />
+            <img src="../img/img2.jpg" class="w-[600px] object-left" alt="" />
           </div>
           <div
             class="container md:w-1/2 w-full flex flex-col items-center md:items-start md:pl-28 justify-center px-12 space-y-3"
@@ -185,34 +162,14 @@
               alt=""
             />
             <p class="text-center text-[20px] font-normal w-full">
-              You apply for the program and if we love your application,we'll
-              give you a call and invite you to join our squad. Your
-              responsibilities as a campus ambassador are simple: Make your
-              peers aware of Seedsnitch and find those hidden gems: the students
-              on your campus who have a burning passion to start a business but
-              just need a little push. And that's where we come in.
-              <span id="dots2">...</span>
-              <span id="more2">
-                We're here to be the support system for all those college
-                students who have big dreams and the drive to make them a
-                reality. We're not in it for the money; we're in it for the
-                passion. If you bring us a startup idea that has potential and
-                gets funded, you'll get a cut of the deal. So, the more
-                potential ideas you bring in, the more money you can make. But
-                you might be thinking, "How do I identify a potential idea?" The
-                answer is simple: Trust your gut. If something sounds too good,
-                it probably is. But if it sounds like the next big thing and
-                you're thinking "Oh my god, this is it!" then it probably
-                is.</span
-              >
-              <br />
-              <button
-                onclick="myFunction2()"
-                id="myBtn2"
-                class="rounded-md border bg-[#0C6980] text-white p-1 text-[18px] my-2 py-2"
-              >
-                Read more
-              </button>
+              We'll call you if we like your application. Campus ambassador
+              duties are simple: Make Seedsnitch known to your peers and locate
+              the students who want to start up but need a little push. We help.
+              We support ambitious college students. Passion drives us, not
+              money. You'll be paid Rs. 5,000 if we fund your proposed startup
+              idea. How do I find a good idea? Simply trust your gut. It's
+              probably too excellent. It's probably the next big thing if you're
+              thinking, "Oh, my goodness, this is it!"
             </p>
           </div>
         </div>
