--- a/pages/ambassador.html
+++ b/pages/ambassador.html
@@ -88,7 +88,7 @@
       <div
         class="text-center md:w-1/2 w-full h-full mx-auto flex flex-col items-center justify-start md:py-12"
       >
-        <div class="w-full md:w-[800px] text-center">
+        <div class="w-full md:w-[800px] text-center p-4 md:p-2">
           <h2
             class="md:font-extrabold font-bold text-4xl md:text-5xl pb-2 text-accent"
           >
@@ -99,7 +99,7 @@
             <!--text-[#242424]-->
             Join the seedsnitch ambassador program and become a superhero
             sidekick that help peers turn ideas into startups and also earn
-            exciting rewards for each referral..
+            exciting rewards for each referral
           </h2>
         </div>
       </div>
@@ -285,7 +285,8 @@
                   class="appearance-none block w-full bg-gray-100 text-darkBlue border border-grabg-gray-100 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
                   id="grid-date"
                   required
-                  type="date"
+                  placeholder="YYYY"
+                  type="text"
                 />
               </div>
             </div>
