--- a/pages/apply.html
+++ b/pages/apply.html
@@ -27,7 +27,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="../css/main.css" />
-    <title>Ambassador Program | Seedsnitch</title>
+    <title>Apply here | Seedsnitch</title>
   </head>
 
   <body>
@@ -172,9 +172,9 @@
       </div>
     </section> -->
 
-    <section id="about-container" class="mt-10 mb-28">
+    <section id="about-container" class="mt-10 md:mt-0 mb-28 h-auto">
       <div
-        class="h-full w-full flex flex-col gap-4 justify-between items-center space-y-8 p-4"
+        class="h-full w-full flex flex-col gap-4 justify-between items-center space-y-8 p-4 md:pt-10"
       >
         <!-- <h2
           class="md:font-extrabold font-bold text-4xl md:text-5xl text-accent"
@@ -182,10 +182,10 @@
           <span class="text-[#242424]"> Tell us about&nbsp;</span>yourself
         </h2> -->
         <div
-          class="w-full md:w-[800px] h-full rounded-md mx-auto form border-t border-t-gray-100 px-4"
+          class="w-full md:w-[800px] h-auto rounded-md mx-auto form border-t border-t-gray-100 px-4 bg-white"
         >
           <form
-            class="w-full h-full px-4 py-6 md:flex items-start justify-between"
+            class="w-full h-full px-4 pt-6 pb-3 md:flex items-start justify-between bg-white"
           >
             <div
               class="w-full md:w-1/2 flex flex-col items-start justify-start"
@@ -333,7 +333,7 @@
                 </div>
               </div>
               <div class="flex flex-wrap -mx-3 mb-2">
-                <div class="w-full md:w-full px-3 mb-6 md:mb-0">
+                <div class="w-full md:w-full mb-6 md:mb-0 md:px-3">
                   <label
                     class="block uppercase tracking-wide text-darkBlue text-xs font-bold mb-2"
                     for="grid-prob"
@@ -385,7 +385,7 @@
         </div>
       </div>
     </section>
-    <!-- <footer class="bg-[#0f6d6d] text-white py-2 mt-[100vh]">
+    <footer class="bg-[#0f6d6d] text-white py-2">
       <div class="footer">
         <div class="row">
           <a href="#" id="linkedin"><i class="fab fa-linkedin"></i></a>
@@ -405,7 +405,7 @@
 
         <div class="row">Seedsnitch Copyright © 2023 All rights reserved</div>
       </div>
-    </footer> -->
+    </footer>
     <script>
       var x = document.getElementById("navbar");
       window.onscroll = function () {
