--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </a>
         <a
           class="cursor-pointer flex justify-center items-center font-medium rounded-md border bg-[#0C6980] text-white hover:bg-[#084352] hover:text-white text-xs shrink-0 py-2 px-3 md:py-2 md:px-6 md:text-sm"
-          href="pages/ambassador.html"
+          href="pages./ambassador.html"
         >
           Become an ambassador
         </a>
@@ -166,10 +166,9 @@
 
         <div class="row">
           <ul>
-            <li><a href="#">Contact us</a></li>
-            <li><a href="#">About us</a></li>
-            <li><a href="#">FAQ</a></li>
-            <!-- <li><a href="#">Terms & Conditions</a></li> -->
+            <li><a href="/pages/contact.html">Contact us</a></li>
+            <li><a href="/pages/about.html">About us</a></li>
+            <li><a href="/pages/faq.html">FAQ</a></li>
             <li><a href="#">Career</a></li>
           </ul>
         </div>
