--- a/pages/about.html
+++ b/pages/about.html
@@ -43,42 +43,45 @@
       <div
         class="hidden container ml-36 flex-row items-center justify-center space-x-8 md:flex max-w-1/3"
       >
-        <a href="./about.html" class="link">About</a>
+        <a href="#" class="link">About</a>
         <a href="#" class="link">Resource</a>
         <a href="./contact.html" class="link">Contact</a>
         <a href="./faq.html" class="link">FAQ</a>
       </div>
       <!-- <button id="menu-btn" class="block hamburger md:hidden focus:outline-none">
-  <span class="hamburger-top"></span>
-  <span class="hamburger-middle"></span>
-  <span class="hamburger-bottom"></span>
+<span class="hamburger-top"></span>
+<span class="hamburger-middle"></span>
+<span class="hamburger-bottom"></span>
 </button> -->
       <!-- </div> -->
 
       <!-- <div class="md:hidden">
-  <div id="menu"
-    class="absolute flex-col items-center hidden self-end py-8 mt-10 space-y-6 font-bold  sm:w-min-3xl sm:self-center px-8 right-6 drop-shadow-md bg-cardColor text-overlay">
-    <a href="#" id="projectLink" class="hover:text-darkGrayishBlue link">Projects</a>
-    <a href="#" class="hover:text-darkGrayishBlue link">About</a>
-    <a href="#" class="hover:text-darkGrayishBlue link">Contact</a>
+<div id="menu"
+  class="absolute flex-col items-center hidden self-end py-8 mt-10 space-y-6 font-bold  sm:w-min-3xl sm:self-center px-8 right-6 drop-shadow-md bg-cardColor text-overlay">
+  <a href="#" id="projectLink" class="hover:text-darkGrayishBlue link">Projects</a>
+  <a href="#" class="hover:text-darkGrayishBlue link">About</a>
+  <a href="#" class="hover:text-darkGrayishBlue link">Contact</a>
 </div> -->
 
       <div
         class="max-w-1/3 hidden items-center justify-end pr-4 font-semibold button-effect space-x-4 md:flex"
       >
         <!-- <button class="rounded-md border border-black  px-4 py-1 text-center effect effect-5" id="button">Apply</button> -->
-        <button
-          class="cursor-pointer border-textBlue border flex justify-center items-center font-medium rounded-md hover:bg-accent text-textBlue text-xs shrink-0 p-2 md:py-2 md:px-4 md:text-sm"
+        <a
+          href="./apply.html"
+          class="cursor-pointer border-textBlue border flex justify-center items-center font-medium rounded-md hover:bg-accent text-textBlue text-xs shrink-0 py-2 px-2 md:py-2 md:px-4 md:text-sm"
         >
           Apply
-        </button>
-        <button
-          class="cursor-pointer flex justify-center items-center font-medium rounded-md border bg-[#0C6980] text-white border-gray-500 hover:bg-[#084352] hover:text-white text-xs shrink-0 py-2 px-3 md:py-2 md:px-6 md:text-sm"
+        </a>
+        <a
+          class="cursor-pointer flex justify-center items-center font-medium rounded-md border bg-[#0C6980] text-white hover:bg-[#084352] hover:text-white text-xs shrink-0 py-2 px-3 md:py-2 md:px-6 md:text-sm"
+          href="./ambassador.html"
         >
           Become an ambassador
-        </button>
+        </a>
       </div>
     </nav>
+
     <section
       class="w-full mx-auto flex flex-col items-center mt-16 yellow gap-6 py-10 md:gap-16 md:pt-8 md:w-full"
     >
