--- a/pages/ambassador.html
+++ b/pages/ambassador.html
@@ -49,34 +49,36 @@
         <a href="./faq.html" class="link">FAQ</a>
       </div>
       <!-- <button id="menu-btn" class="block hamburger md:hidden focus:outline-none">
-  <span class="hamburger-top"></span>
-  <span class="hamburger-middle"></span>
-  <span class="hamburger-bottom"></span>
+<span class="hamburger-top"></span>
+<span class="hamburger-middle"></span>
+<span class="hamburger-bottom"></span>
 </button> -->
       <!-- </div> -->
 
       <!-- <div class="md:hidden">
-  <div id="menu"
-    class="absolute flex-col items-center hidden self-end py-8 mt-10 space-y-6 font-bold  sm:w-min-3xl sm:self-center px-8 right-6 drop-shadow-md bg-cardColor text-overlay">
-    <a href="#" id="projectLink" class="hover:text-darkGrayishBlue link">Projects</a>
-    <a href="#" class="hover:text-darkGrayishBlue link">About</a>
-    <a href="#" class="hover:text-darkGrayishBlue link">Contact</a>
+<div id="menu"
+  class="absolute flex-col items-center hidden self-end py-8 mt-10 space-y-6 font-bold  sm:w-min-3xl sm:self-center px-8 right-6 drop-shadow-md bg-cardColor text-overlay">
+  <a href="#" id="projectLink" class="hover:text-darkGrayishBlue link">Projects</a>
+  <a href="#" class="hover:text-darkGrayishBlue link">About</a>
+  <a href="#" class="hover:text-darkGrayishBlue link">Contact</a>
 </div> -->
 
       <div
         class="max-w-1/3 hidden items-center justify-end pr-4 font-semibold button-effect space-x-4 md:flex"
       >
         <!-- <button class="rounded-md border border-black  px-4 py-1 text-center effect effect-5" id="button">Apply</button> -->
-        <button
-          class="cursor-pointer border-textBlue border flex justify-center items-center font-medium rounded-md hover:bg-accent text-textBlue text-xs shrink-0 p-2 md:py-2 md:px-4 md:text-sm"
+        <a
+          href="./apply.html"
+          class="cursor-pointer border-textBlue border flex justify-center items-center font-medium rounded-md hover:bg-accent text-textBlue text-xs shrink-0 py-2 px-2 md:py-2 md:px-4 md:text-sm"
         >
           Apply
-        </button>
-        <button
-          class="cursor-pointer flex justify-center items-center font-medium rounded-md border bg-[#0C6980] text-white border-gray-500 hover:bg-[#084352] hover:text-white text-xs shrink-0 py-2 px-3 md:py-2 md:px-6 md:text-sm"
+        </a>
+        <a
+          class="cursor-pointer flex justify-center items-center font-medium rounded-md border bg-[#0C6980] text-white hover:bg-[#084352] hover:text-white text-xs shrink-0 py-2 px-3 md:py-2 md:px-6 md:text-sm"
+          href="#"
         >
-          Become a ambassador
-        </button>
+          Become an ambassador
+        </a>
       </div>
     </nav>
 
@@ -178,7 +180,7 @@
 
     <section>
       <div
-        class="h-full w-full flex flex-col gap-4 justify-between items-center space-y-8 p-4"
+        class="h-full w-full flex flex-col gap-4 justify-between items-center space-y-8 p-4 mb-8"
       >
         <h2
           class="md:font-extrabold font-bold text-4xl md:text-5xl text-accent"
@@ -307,7 +309,7 @@
         </div>
       </div>
     </section>
-    <!-- <footer class="bg-[#0f6d6d] text-white py-2 mt-[100vh]">
+    <footer class="bg-[#0f6d6d] text-white py-2">
       <div class="footer">
         <div class="row">
           <a href="#" id="linkedin"><i class="fab fa-linkedin"></i></a>
@@ -318,16 +320,16 @@
 
         <div class="row">
           <ul>
-            <li><a href="#">Contact us</a></li>
-            <li><a href="#">About us</a></li>
-            <li><a href="#">FAQ</a></li>
+            <li><a href="./contact.html">Contact us</a></li>
+            <li><a href="./about.html">About us</a></li>
+            <li><a href="./faq.html">FAQ</a></li>
             <li><a href="#">Career</a></li>
           </ul>
         </div>
 
         <div class="row">Seedsnitch Copyright © 2023 All rights reserved</div>
       </div>
-    </footer> -->
+    </footer>
     <script>
       var x = document.getElementById("navbar");
       window.onscroll = function () {
