--- a/pages/contact.html
+++ b/pages/contact.html
@@ -47,70 +47,73 @@
       >
         <a href="./about.html" class="link">About</a>
         <a href="#" class="link">Resource</a>
-        <a href="#" class="link">Contact</a>
+        <a href="./contact.html" class="link">Contact</a>
         <a href="./faq.html" class="link">FAQ</a>
       </div>
       <!-- <button id="menu-btn" class="block hamburger md:hidden focus:outline-none">
-      <span class="hamburger-top"></span>
-      <span class="hamburger-middle"></span>
-      <span class="hamburger-bottom"></span>
-    </button> -->
+  <span class="hamburger-top"></span>
+  <span class="hamburger-middle"></span>
+  <span class="hamburger-bottom"></span>
+</button> -->
       <!-- </div> -->
 
       <!-- <div class="md:hidden">
-      <div id="menu"
-        class="absolute flex-col items-center hidden self-end py-8 mt-10 space-y-6 font-bold  sm:w-min-3xl sm:self-center px-8 right-6 drop-shadow-md bg-cardColor text-overlay">
-        <a href="#" id="projectLink" class="hover:text-darkGrayishBlue link">Projects</a>
-        <a href="#" class="hover:text-darkGrayishBlue link">About</a>
-        <a href="#" class="hover:text-darkGrayishBlue link">Contact</a>
-    </div> -->
+  <div id="menu"
+    class="absolute flex-col items-center hidden self-end py-8 mt-10 space-y-6 font-bold  sm:w-min-3xl sm:self-center px-8 right-6 drop-shadow-md bg-cardColor text-overlay">
+    <a href="#" id="projectLink" class="hover:text-darkGrayishBlue link">Projects</a>
+    <a href="#" class="hover:text-darkGrayishBlue link">About</a>
+    <a href="#" class="hover:text-darkGrayishBlue link">Contact</a>
+</div> -->
 
       <div
-        class="max-w-1/3 hidden items-center justify-end pr-4 font-semibold button-effect space-x-2 md:flex"
+        class="max-w-1/3 hidden items-center justify-end pr-4 font-semibold button-effect space-x-4 md:flex"
       >
         <!-- <button class="rounded-md border border-black  px-4 py-1 text-center effect effect-5" id="button">Apply</button> -->
-        <button
-          class="cursor-pointer border-textBlue border flex justify-center items-center font-medium rounded-md hover:bg-accent text-textBlue text-xs shrink-0 p-2 md:py-2 md:px-4 md:text-sm"
+        <a
+          href="./apply.html"
+          class="cursor-pointer border-textBlue border flex justify-center items-center font-medium rounded-md hover:bg-accent text-textBlue text-xs shrink-0 py-2 px-2 md:py-2 md:px-4 md:text-sm"
         >
           Apply
-        </button>
-        <button
-          class="cursor-pointer flex justify-center items-center font-medium rounded-md border bg-[#0C6980] text-white border-gray-500 hover:bg-[#084352] hover:text-white text-xs shrink-0 py-2 px-3 md:py-2 md:px-6 md:text-sm"
+        </a>
+        <a
+          class="cursor-pointer flex justify-center items-center font-medium rounded-md border bg-[#0C6980] text-white hover:bg-[#084352] hover:text-white text-xs shrink-0 py-2 px-3 md:py-2 md:px-6 md:text-sm"
+          href="./ambassador.html"
         >
-          Become a ambassador
-        </button>
+          Become an ambassador
+        </a>
       </div>
     </nav>
+
     <!-- Intro Section -->
+
     <section
-      class="mt-20 gap-x-8 h-[auto] md:flex-row md:gap-x-16 bg-[#eeefef]"
+      class="mt-20 gap-x-8 h-[auto] md:flex-row px-4 md:px-0 md:gap-x-16 bg-[#eeefef] w-full"
     >
       <!-- #ffdad1-->
+
       <div
-        class="text-center w-full h-full mx-auto flex flex-col items-center justify-start md:py-12"
+        class="text-center md:w-1/2 w-full h-full mx-auto flex flex-col items-center justify-start md:py-12"
       >
-        <div class="w-full md:w-[800px] text-center">
+        <div class="w-full md:w-[800px] text-center p-4 md:p-2">
           <h2
-            class="md:font-black font-semibold text-4xl md:text-5xl pb-2 text-accent"
+            class="md:font-extrabold font-bold text-4xl md:text-5xl pb-2 text-accent"
           >
             <!-- text-[#f57456] -->
-            Get in touch with us
+            <span class="text-[#242424]"> Get in touch </span>with us
           </h2>
-          <h2 class="text-2xl font-medium md:font-semibold text-[#242424]">
+          <h2 class="font-light text-2xl md:font-normal text-[#242424]">
             <!--text-[#242424]-->
             Our team is always ready to lend a helping hand and engage in a
-            creative dialogue with you.
+            creative dialogue with you
           </h2>
         </div>
       </div>
     </section>
-
     <section
-      id="about-container"
-      class="h-[590px] px-2 relative mb-12 md:mt-0 mt-12"
+      class="h-auto py-10 md:h-[590px] px-2 relative mb-12 md:mt-0 mt-12"
     >
       <div
-        class="h-full w-full flex flex-col gap-4 justify-between md:flex-row absolute -top-4 right-4"
+        class="h-full w-full flex flex-col gap-4 justify-between md:flex-row md:absolute -top-4 right-4"
       >
         <div
           class="w-[400px] h-full rounded-md backdrop-blur-md mx-auto form border-t border-t-gray-200"
@@ -210,8 +213,37 @@
               </div>
             </div>
           </form>
+          <div class="md:hidden flex flex-col items-center">
+            <img
+              src="../img/contact.png"
+              class="h-[400px] object-contain"
+              alt=""
+            />
+            <div
+              class="bg-transparent p-2 flex flex-col justify-center items-start text-left"
+            >
+              <div>
+                <p class="text-2xl font-semibold mb-4">
+                  You can also reach out on
+                </p>
+                <div>
+                  <div>
+                    <p class="font-medium text-center">
+                      Phone:&nbsp;+91 8144200700&nbsp;
+                    </p>
+                    <p class="font-medium text-center">
+                      Email:&nbsp;seedsnitch@abc.com&nbsp;
+                    </p>
+                  </div>
+                  <p>&nbsp;</p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="w-1/2 h-full flex flex-col items-center justify-center">
+        <div
+          class="hidden w-1/2 h-full md:flex flex-col items-center justify-center"
+        >
           <img
             src="../img/contact.png"
             class="h-[400px] object-contain"
@@ -240,7 +272,7 @@
         </div>
       </div>
     </section>
-    <footer class="bg-[#0f6d6d] text-white py-2">
+    <!-- <footer class="bg-[#0f6d6d] text-white py-2">
       <div class="footer">
         <div class="row">
           <a href="#" id="linkedin"><i class="fab fa-linkedin"></i></a>
@@ -260,7 +292,7 @@
 
         <div class="row">Seedsnitch Copyright © 2023 All rights reserved</div>
       </div>
-    </footer>
+    </footer> -->
 
     <script>
       var x = document.getElementById("navbar");
