--- a/pages/about.html
+++ b/pages/about.html
@@ -100,18 +100,19 @@
             alt="we are seedsnitch"
           />
         </div>
-        <div class="container w-full flex flex-row items-center md:w-1/2 px-4">
+        <div
+          class="container w-full flex flex-row items-center md:w-1/2 px-4 md:pr-28"
+        >
           <p
             class="text-[1em] md:text-[24px] font-[400] text-center md:pl-14 max-w-lg md:max-w-full leading-relaxed"
           >
-            SeedSnitch is a platform dedicated to helping college students
-            transform their ideas into successful ventures. We are aware of the
-            unique challenges that a student might come across while starting
-            up, and we are here to bridge the gap through guidance and resources
-            essential to overcoming them. Far beyond just a platform, we are a
-            community with a stern belief that when entrepreneurs come together
-            to share their share of experiences and support,
-            great things happen.
+            Seedsnitch is a platform solely dedicated to assisting college
+            students in transforming their business ideas into profitable
+            enterprises. We are aware of the unique obstacles a student may face
+            when starting a business, and we are here to provide the guidance
+            and resources necessary to overcome them. We are a community with a
+            firm belief that when entrepreneurs come together to share their
+            experiences and offer one another support, great things can occur.
           </p>
         </div>
       </div>
