--- a/pages/ambassador.html
+++ b/pages/ambassador.html
@@ -99,9 +99,9 @@
           </h2>
           <h2 class="font-light text-2xl md:font-normal text-[#242424]">
             <!--text-[#242424]-->
-            Join the seedsnitch ambassador program and become a superhero
-            sidekick that help peers turn ideas into startups and also earn
-            exciting rewards for each referral
+            Join the Seedsnitch Ambassador Program and assist your
+            peers in transforming ideas into startups
+            while also earning incentives for each referral.
           </h2>
         </div>
       </div>
@@ -111,7 +111,9 @@
       <div
         class="py-4 text-center w-full h-full mx-auto flex flex-col items-center justify-start container"
       >
-        <div class="w-full p-4 flex flex-row justify-evenly items-center my-4">
+        <div
+          class="w-full p-4 flex flex-row-reverse justify-evenly items-center my-4"
+        >
           <div class="hidden md:flex flex-row justify-center w-1/2">
             <img
               src="../img/ambass2.jpg"
@@ -133,18 +135,48 @@
               alt=""
             />
             <p class="text-center text-[20px] font-normal w-full">
-              The Seedsnitch Campus Program is a unique opportunity for college
-              students to get involved with the startup ecosystem and earn
-              exciting rewards. As a campus ambassador, you will be helping your
-              peers turn their ideas into successful ventures by connecting them
-              with the resources and support they need to succeed. With
-              Seedsnitch, you'll be able to help build the next big thing while
-              also earning rewards for each successful referral.
+              The Seedsnitch Campus Program is a one-of-a-kind opportunity for
+              college students to participate in the startup ecosystem and
+              receive rewarding benefits. As a campus ambassador, you will
+              assist your peers in transforming their ideas into successful
+              businesses by linking them with the necessary assistance. With us,
+              you'll be able to contribute to the development of the next great
+              thing while simultaneously receiving compensation for each
+              successful referral.
             </p>
           </div>
         </div>
 
-        <div
+        <div class="w-full p-4 flex flex-row justify-evenly items-center my-4">
+          <div class="hidden md:flex flex-row justify-center w-1/2">
+            <img src="../img/img2.jpg" class="w-[600px] object-right" alt="" />
+          </div>
+          <div
+            class="container md:w-1/2 w-full flex flex-col items-center md:items-start justify-center px-12 space-y-3"
+          >
+            <h1
+              class="md:font-black font-semibold text-4xl md:text-5xl pb-2 text-accent text-center w-full"
+            >
+              How does this work?
+            </h1>
+            <img
+              src="../img/img2.jpg"
+              class="block w-[180px] md:hidden"
+              alt=""
+            />
+            <p class="text-center text-[20px] font-normal w-full">
+              We will contact you if your application is accepted. Campus
+              ambassador tasks are simple: Make your friends aware of Seedsnitch
+              and identify students who want to start a business but need
+              assistance. We help. We support college students with ambition. We
+              are motivated by our passion, not by money. You will receive Rs.
+              5,000 if your recommended startup idea is funded. How can I
+              generate a good idea? Simply rely on instinct.
+            </p>
+          </div>
+        </div>
+
+        <!-- <div
           class="w-full p-4 flex flex-row-reverse justify-evenly items-center my-8"
         >
           <div class="hidden md:flex flex-row justify-end w-1/2">
@@ -164,17 +196,16 @@
               alt=""
             />
             <p class="text-center text-[20px] font-normal w-full">
-              We'll call you if we like your application. Campus ambassador
-              duties are simple: Make Seedsnitch known to your peers and locate
-              the students who want to start up but need a little push. We help.
-              We support ambitious college students. Passion drives us, not
-              money. You'll be paid Rs. 5,000 if we fund your proposed startup
-              idea. How do I find a good idea? Simply trust your gut. It's
-              probably too excellent. It's probably the next big thing if you're
-              thinking, "Oh, my goodness, this is it!"
+              We will contact you if your application is accepted. Campus
+              ambassador tasks are simple: Make your friends aware of Seedsnitch
+              and identify students who want to start a business but need
+              assistance. We help. We support college students with ambition. We
+              are motivated by our passion, not by money. You will receive Rs.
+              5,000 if your recommended startup idea is funded. How can I
+              generate a good idea? Simply rely on instinct.
             </p>
           </div>
-        </div>
+        </div> -->
       </div>
     </section>
 
