--- a/pages/contact.html
+++ b/pages/contact.html
@@ -2,8 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="../img/favicon.ico.png" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -87,7 +90,7 @@
     <!-- Intro Section -->
 
     <section
-      class="mt-20 gap-x-8 h-[auto] md:flex-row px-4 md:px-0 md:gap-x-16 bg-[#eeefef] w-full"
+      class="mt-20 gap-x-8 h-[auto] md:flex-row px-4 md:px-0 md:gap-x-16 w-full"
     >
       <!-- #ffdad1-->
 
@@ -99,12 +102,12 @@
             class="md:font-extrabold font-bold text-4xl md:text-5xl pb-2 text-accent"
           >
             <!-- text-[#f57456] -->
-            <span class="text-[#242424]"> Get in touch </span>with us
+            <span class="text-[#242424]"> Get in touch </span>with us.
           </h2>
           <h2 class="font-light text-2xl md:font-normal text-[#242424]">
             <!--text-[#242424]-->
             Our team is always ready to lend a helping hand and engage in a
-            creative dialogue with you
+            creative dialogue with you.
           </h2>
         </div>
       </div>
@@ -113,7 +116,7 @@
       class="h-auto py-10 md:h-[590px] px-2 relative mb-12 md:mt-0 mt-12"
     >
       <div
-        class="h-full w-full flex flex-col gap-4 justify-between md:flex-row md:absolute -top-4 right-4"
+        class="h-full w-full flex flex-col gap-4 justify-between md:flex-row md:absolute right-4"
       >
         <div
           class="w-[400px] h-full rounded-md backdrop-blur-md mx-auto form border-t border-t-gray-200"
