--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="icon" type="image/x-icon" href="../img/favicon.ico.png" />
+
     <meta charset="UTF-8" />
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -102,7 +104,7 @@
             class="md:font-extrabold font-bold text-4xl md:text-5xl pb-2 text-accent"
           >
             <!-- text-[#f57456] -->
-            <span class="text-[#242424]"> Get in touch </span>with us.
+            Get in touch
           </h2>
           <h2 class="font-light text-2xl md:font-normal text-[#242424]">
             <!--text-[#242424]-->
