--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
     <!--  -->
     <!-- NavBar -->
     <nav
-      class="bg-transparent px-4 flex items-center justify-between pt-4 pb-4 mx-auto fixed top-0 left-0 right-0 z-50 text-textBlue font-[600] z-10"
+      class="bg-transparent px-4 flex items-center justify-between pt-4 pb-4 mx-auto fixed top-0 left-0 right-0 z-50 text-textBlue font-[600]"
       id="navbar"
     >
       <div class="max-w-1/3">
         <a href="#">
-          <img src="img/logo-new.png" class="w-[250px]" alt="" />
+          <img src="./img/logo-new.png" class="w-[250px]" alt="" />
         </a>
       </div>
       <div
-        class="hidden container ml-36 flex-row items-center justify-center space-x-8 md:flex max-w-1/3"
+        class="hidden container ml-6 flex-row items-center justify-center space-x-10 md:flex max-w-1/3"
       >
         <a href="./pages/about.html" class="link">About</a>
         <a href="#" class="link">Resource</a>
@@ -53,19 +53,19 @@
         <a href="./pages/faq.html" class="link">FAQ</a>
       </div>
       <!-- <button id="menu-btn" class="block hamburger md:hidden focus:outline-none">
-      <span class="hamburger-top"></span>
-      <span class="hamburger-middle"></span>
-      <span class="hamburger-bottom"></span>
-    </button> -->
+<span class="hamburger-top"></span>
+<span class="hamburger-middle"></span>
+<span class="hamburger-bottom"></span>
+</button> -->
       <!-- </div> -->
 
       <!-- <div class="md:hidden">
-      <div id="menu"
-        class="absolute flex-col items-center hidden self-end py-8 mt-10 space-y-6 font-bold  sm:w-min-3xl sm:self-center px-8 right-6 drop-shadow-md bg-cardColor text-overlay">
-        <a href="#" id="projectLink" class="hover:text-darkGrayishBlue link">Projects</a>
-        <a href="#" class="hover:text-darkGrayishBlue link">About</a>
-        <a href="#" class="hover:text-darkGrayishBlue link">Contact</a>
-    </div> -->
+<div id="menu"
+  class="absolute flex-col items-center hidden self-end py-8 mt-10 space-y-6 font-bold  sm:w-min-3xl sm:self-center px-8 right-6 drop-shadow-md bg-cardColor text-overlay">
+  <a href="#" id="projectLink" class="hover:text-darkGrayishBlue link">Projects</a>
+  <a href="#" class="hover:text-darkGrayishBlue link">About</a>
+  <a href="#" class="hover:text-darkGrayishBlue link">Contact</a>
+</div> -->
 
       <div
         class="max-w-1/3 hidden items-center justify-end pr-4 font-semibold button-effect space-x-4 md:flex"
@@ -73,13 +73,13 @@
         <!-- <button class="rounded-md border border-black  px-4 py-1 text-center effect effect-5" id="button">Apply</button> -->
         <a
           href="./pages/apply.html"
-          class="cursor-pointer border-textBlue border flex justify-center items-center font-medium rounded-md hover:bg-accent text-textBlue text-xs shrink-0 py-2 px-2 md:py-2 md:px-4 md:text-sm"
+          class="cursor-pointer border-gray-200 border flex justify-center items-center font-medium rounded-md hover:bg-accent text-black text-xs shrink-0 py-2 px-2 md:py-2 md:px-4 md:text-sm"
         >
           Apply
         </a>
         <a
           class="cursor-pointer flex justify-center items-center font-medium rounded-md border bg-[#0C6980] text-white hover:bg-[#084352] hover:text-white text-xs shrink-0 py-2 px-3 md:py-2 md:px-6 md:text-sm"
-          href="pages/ambassador.html"
+          href="./pages/ambassador.html"
         >
           Become an ambassador
         </a>
@@ -95,26 +95,24 @@
         id="intro-text"
       >
         <div
-          class="container pt-5 max-w-md ml-16 text-accent text-5xl font-black mt-28 relative"
+          class="container text-3xl pt-5 md:max-w-3xl ml-16 text-accent md:text-6xl font-black mt-28 relative"
           id="intro-text"
         >
           <span>
             Fueling the college startup revolution
-            <img
-              src="https://img.icons8.com/external-icongeek26-outline-icongeek26/64/0fcab2/external-paper-plane-kindergarten-icongeek26-outline-icongeek26.png"
-              class="w-[50px] absolute right-0 -top-8"
+            <img src="img/icon.png" class="w-[50px] absolute -right-12 -top-6"
           /></span>
         </div>
-        <div class="max-w-md text-medBlue font-bold text-[20px] ml-16">
+        <div class="max-w-md text-medBlue font-semibold text-[20px] ml-16">
           <p>
-            We support college entrepreneurs through <br />
+            Supporting college entrepreneurs through <br />
             mentorship, a cohort program and <br />campus representation.
           </p>
         </div>
         <div>
           <a href="./pages/about.html">
             <button
-              class="text-white bg-[#0C6980] rounded-md py-2 px-8 mt-4 text-[16px] hover:bg-[#084352] ml-16"
+              class="text-white bg-[#0C6980] rounded-md py-3 px-9 mt-4 text-[16px] hover:bg-[#084352] ml-16"
             >
               Learn More
             </button></a
@@ -160,7 +158,7 @@
     <footer class="bg-[#0f6d6d] text-white py-2 static bottom-0 left-0 w-full">
       <div class="footer">
         <div class="row">
-          <a href="#" id=""><i class="fab fa-linkedin"></i></a>
+          <a href="#" id="linkedin"><i class="fab fa-linkedin"></i></a>
           <a href="#" id="instagram"><i class="fab fa-instagram"></i></a>
           <a href="#" id="youtube"><i class="fab fa-youtube"></i></a>
           <a href="#" id="twitter"><i class="fab fa-twitter"></i></a>
@@ -168,10 +166,10 @@
 
         <div class="row">
           <ul>
-            <li><a href="/pages/contact.html">Contact us</a></li>
             <li><a href="/pages/about.html">About us</a></li>
+            <li><a href="/pages/contact.html">Contact us</a></li>
             <li><a href="/pages/faq.html">FAQ</a></li>
-            <li><a href="#">Career</a></li>
+            <li><a href="/pages/ambassador.html">Ambassador Program </a></li>
           </ul>
         </div>
 
