--- a/pages/about.html
+++ b/pages/about.html
@@ -43,9 +43,9 @@
         </a>
       </div>
       <div
-        class="hidden container ml-36 flex-row items-center justify-center space-x-8 md:flex max-w-1/3"
+        class="hidden container ml-6 flex-row items-center justify-center space-x-10 md:flex max-w-1/3"
       >
-        <a href="#" class="link">About</a>
+        <a href="./about.html" class="link">About</a>
         <a href="#" class="link">Resource</a>
         <a href="./contact.html" class="link">Contact</a>
         <a href="./faq.html" class="link">FAQ</a>
@@ -71,7 +71,7 @@
         <!-- <button class="rounded-md border border-black  px-4 py-1 text-center effect effect-5" id="button">Apply</button> -->
         <a
           href="./apply.html"
-          class="cursor-pointer border-textBlue border flex justify-center items-center font-medium rounded-md hover:bg-accent text-textBlue text-xs shrink-0 py-2 px-2 md:py-2 md:px-4 md:text-sm"
+          class="cursor-pointer border-gray-200 border flex justify-center items-center font-medium rounded-md hover:bg-accent text-black text-xs shrink-0 py-2 px-2 md:py-2 md:px-4 md:text-sm"
         >
           Apply
         </a>
@@ -123,13 +123,15 @@
       <hr class="h-px w-2/3 mt-10 bg-[#242424] border-0" />
     </div>
 
-    <section id="service">
-      <div class="text-center text-5xl font-bold text-[#242424] mb-8">
+    <section id="service" class="mb-12">
+      <div
+        class="text-center text-4xl md:text-5xl font-bold text-[#242424] mb-8"
+      >
         <span class="text-accent"> Why</span> Choose Us?
       </div>
 
       <main>
-        <p class="text-[20px]">
+        <p class="text-[16px]">
           <img
             src="../img/choose1.png"
             alt=""
@@ -139,7 +141,7 @@
           the initial funding needed to get your business off the ground and
           help you with your first steps of execution.
         </p>
-        <p class="text-[18px]">
+        <p class="text-[16px]">
           <img
             src="../img/choose2.png"
             alt=""
@@ -150,7 +152,7 @@
           educators provides guidance and support to help you navigate the
           startup world and achieve your goals.
         </p>
-        <p class="text-[20px]">
+        <p class="text-[16px]">
           <img
             src="../img/calendar.png"
             alt=""
@@ -161,7 +163,7 @@
           prepares you for the startup world.
         </p>
 
-        <p class="text-[20px]">
+        <p class="text-[16px]">
           <img
             src="../img/campus.png"
             alt=""
@@ -174,7 +176,7 @@
         </p>
       </main>
     </section>
-    <footer class="bg-[#0f6d6d] text-white py-2">
+    <footer class="bg-[#0f6d6d] text-white py-2 static bottom-0 left-0 w-full">
       <div class="footer">
         <div class="row">
           <a href="#" id="linkedin"><i class="fab fa-linkedin"></i></a>
@@ -185,11 +187,10 @@
 
         <div class="row">
           <ul>
-            <li><a href="#">Contact us</a></li>
-            <li><a href="#">About us</a></li>
-            <li><a href="#">FAQ</a></li>
-            <!-- <li><a href="#">Terms & Conditions</a></li> -->
-            <li><a href="#">Career</a></li>
+            <li><a href="./about.html">About us</a></li>
+            <li><a href="./contact.html">Contact us</a></li>
+            <li><a href="./faq.html">FAQ</a></li>
+            <li><a href="./ambassador.html">Ambassador Program </a></li>
           </ul>
         </div>
 
