--- a/pages/ambassador.html
+++ b/pages/ambassador.html
@@ -43,7 +43,7 @@
         </a>
       </div>
       <div
-        class="hidden container ml-36 flex-row items-center justify-center space-x-8 md:flex max-w-1/3"
+        class="hidden container ml-6 flex-row items-center justify-center space-x-10 md:flex max-w-1/3"
       >
         <a href="./about.html" class="link">About</a>
         <a href="#" class="link">Resource</a>
@@ -71,13 +71,13 @@
         <!-- <button class="rounded-md border border-black  px-4 py-1 text-center effect effect-5" id="button">Apply</button> -->
         <a
           href="./apply.html"
-          class="cursor-pointer border-textBlue border flex justify-center items-center font-medium rounded-md hover:bg-accent text-textBlue text-xs shrink-0 py-2 px-2 md:py-2 md:px-4 md:text-sm"
+          class="cursor-pointer border-gray-200 border flex justify-center items-center font-medium rounded-md hover:bg-accent text-black text-xs shrink-0 py-2 px-2 md:py-2 md:px-4 md:text-sm"
         >
           Apply
         </a>
         <a
           class="cursor-pointer flex justify-center items-center font-medium rounded-md border bg-[#0C6980] text-white hover:bg-[#084352] hover:text-white text-xs shrink-0 py-2 px-3 md:py-2 md:px-6 md:text-sm"
-          href="#"
+          href="./ambassador.html"
         >
           Become an ambassador
         </a>
@@ -342,7 +342,7 @@
         </div>
       </div>
     </section>
-    <footer class="bg-[#0f6d6d] text-white py-2">
+    <footer class="bg-[#0f6d6d] text-white py-2 static bottom-0 left-0 w-full">
       <div class="footer">
         <div class="row">
           <a href="#" id="linkedin"><i class="fab fa-linkedin"></i></a>
@@ -353,10 +353,10 @@
 
         <div class="row">
           <ul>
-            <li><a href="./contact.html">Contact us</a></li>
             <li><a href="./about.html">About us</a></li>
+            <li><a href="./contact.html">Contact us</a></li>
             <li><a href="./faq.html">FAQ</a></li>
-            <li><a href="#">Career</a></li>
+            <li><a href="./ambassador.html">Ambassador Program </a></li>
           </ul>
         </div>
 
