--- a/pages/apply.html
+++ b/pages/apply.html
@@ -43,7 +43,7 @@
         </a>
       </div>
       <div
-        class="hidden container ml-36 flex-row items-center justify-center space-x-8 md:flex max-w-1/3"
+        class="hidden container ml-6 flex-row items-center justify-center space-x-10 md:flex max-w-1/3"
       >
         <a href="./about.html" class="link">About</a>
         <a href="#" class="link">Resource</a>
@@ -51,18 +51,18 @@
         <a href="./faq.html" class="link">FAQ</a>
       </div>
       <!-- <button id="menu-btn" class="block hamburger md:hidden focus:outline-none">
-  <span class="hamburger-top"></span>
-  <span class="hamburger-middle"></span>
-  <span class="hamburger-bottom"></span>
+<span class="hamburger-top"></span>
+<span class="hamburger-middle"></span>
+<span class="hamburger-bottom"></span>
 </button> -->
       <!-- </div> -->
 
       <!-- <div class="md:hidden">
-  <div id="menu"
-    class="absolute flex-col items-center hidden self-end py-8 mt-10 space-y-6 font-bold  sm:w-min-3xl sm:self-center px-8 right-6 drop-shadow-md bg-cardColor text-overlay">
-    <a href="#" id="projectLink" class="hover:text-darkGrayishBlue link">Projects</a>
-    <a href="#" class="hover:text-darkGrayishBlue link">About</a>
-    <a href="#" class="hover:text-darkGrayishBlue link">Contact</a>
+<div id="menu"
+  class="absolute flex-col items-center hidden self-end py-8 mt-10 space-y-6 font-bold  sm:w-min-3xl sm:self-center px-8 right-6 drop-shadow-md bg-cardColor text-overlay">
+  <a href="#" id="projectLink" class="hover:text-darkGrayishBlue link">Projects</a>
+  <a href="#" class="hover:text-darkGrayishBlue link">About</a>
+  <a href="#" class="hover:text-darkGrayishBlue link">Contact</a>
 </div> -->
 
       <div
@@ -70,8 +70,8 @@
       >
         <!-- <button class="rounded-md border border-black  px-4 py-1 text-center effect effect-5" id="button">Apply</button> -->
         <a
-          href="#"
-          class="cursor-pointer border-textBlue border flex justify-center items-center font-medium rounded-md hover:bg-accent text-textBlue text-xs shrink-0 py-2 px-2 md:py-2 md:px-4 md:text-sm"
+          href="./apply.html"
+          class="cursor-pointer border-gray-200 border flex justify-center items-center font-medium rounded-md hover:bg-accent text-black text-xs shrink-0 py-2 px-2 md:py-2 md:px-4 md:text-sm"
         >
           Apply
         </a>
@@ -94,97 +94,21 @@
           <h2
             class="md:font-extrabold font-bold text-4xl md:text-5xl pb-2 text-accent"
           >
-            <span class="text-[#242424]"> Pitch </span>your vision
+            Pitch <span class="text-[#242424]">your vision</span>
           </h2>
           <h2 class="font-light text-2xl md:font-normal text-[#242424]">
             Join us in shaping the future of innovation by submitting your
             startup idea. Apply now and take the first step towards realizing
-            your entrepreneurial goals by writing us your application
+            your entrepreneurial goals by writing us your application.
           </h2>
         </div>
       </div>
     </section>
 
-    <!-- <section>
-      <div
-        class="py-4 text-center w-full h-full mx-auto flex flex-col items-center justify-start container"
-      >
-        <div class="w-full p-4 flex flex-row justify-evenly items-center my-4">
-          <div class="hidden md:flex flex-row justify-center w-1/2">
-            <img
-              src="../img/ambass2.jpg"
-              class="w-[600px] object-right"
-              alt=""
-            />
-          </div>
-          <div
-            class="container md:w-1/2 w-full flex flex-col items-center md:items-start justify-center px-12 space-y-3"
-          >
-            <h1
-              class="md:font-black font-semibold text-4xl md:text-5xl pb-2 text-accent text-center w-full"
-            >
-              What is it about?
-            </h1>
-            <img
-              src="../img/ambass2.jpg"
-              class="block w-[180px] md:hidden"
-              alt=""
-            />
-            <p class="text-center text-[20px] font-normal w-full">
-              The Seedsnitch Campus Program is a unique opportunity for college
-              students to get involved with the startup ecosystem and earn
-              exciting rewards. As a campus ambassador, you will be helping your
-              peers turn their ideas into successful ventures by connecting them
-              with the resources and support they need to succeed. With
-              Seedsnitch, you'll be able to help build the next big thing while
-              also earning rewards for each successful referral.
-            </p>
-          </div>
-        </div>
-
-        <div
-          class="w-full p-4 flex flex-row-reverse justify-evenly items-center my-8"
-        >
-          <div class="hidden md:flex flex-row justify-end w-1/2">
-            <img src="../img/img2.jpg" class="w-[600px] object-left" alt="" />
-          </div>
-          <div
-            class="container md:w-1/2 w-full flex flex-col items-center md:items-start md:pl-28 justify-center px-12 space-y-3"
-          >
-            <h1
-              class="md:font-extrabold font-semibold text-4xl md:text-5xl pb-2 text-accent text-center w-full"
-            >
-              How does this work?
-            </h1>
-            <img
-              src="../img/img2.jpg"
-              class="block w-[200px] md:hidden"
-              alt=""
-            />
-            <p class="text-center text-[20px] font-normal w-full">
-              We'll call you if we like your application. Campus ambassador
-              duties are simple: Make Seedsnitch known to your peers and locate
-              the students who want to start up but need a little push. We help.
-              We support ambitious college students. Passion drives us, not
-              money. You'll be paid Rs. 5,000 if we fund your proposed startup
-              idea. How do I find a good idea? Simply trust your gut. It's
-              probably too excellent. It's probably the next big thing if you're
-              thinking, "Oh, my goodness, this is it!"
-            </p>
-          </div>
-        </div>
-      </div>
-    </section> -->
-
     <section id="about-container" class="mt-10 md:mt-0 mb-28 h-auto">
       <div
         class="h-full w-full flex flex-col gap-4 justify-between items-center space-y-8 p-4 md:pt-10"
       >
-        <!-- <h2
-          class="md:font-extrabold font-bold text-4xl md:text-5xl text-accent"
-        >
-          <span class="text-[#242424]"> Tell us about&nbsp;</span>yourself
-        </h2> -->
         <div
           class="w-full md:w-[800px] h-auto rounded-md mx-auto form border-t border-t-gray-100 px-4 bg-white"
         >
@@ -282,16 +206,16 @@
                 <div class="w-full px-3">
                   <label
                     class="block uppercase tracking-wide text-darkBlue text-xs font-bold mb-2"
-                    for="grid-date"
+                    for="grid-number"
                   >
-                    Year of Graduation
+                    Contact Number
                   </label>
                   <input
                     class="appearance-none block w-full bg-gray-100 text-darkBlue border border-grabg-gray-100 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
-                    id="grid-date"
+                    id="grid-number"
                     required
-                    placeholder="YYYY"
-                    type="text"
+                    placeholder="Enter your contact number "
+                    type="number"
                   />
                 </div>
               </div>
@@ -320,7 +244,7 @@
               class="w-full md:w-1/2 flex flex-col items-center justify-start"
             >
               <div class="w-full flex flex-wrap -mx-3 mb-2">
-                <div class="w-full md:w-full md:px-3 mb-6 md:mb-0">
+                <div class="w-full md:w-full mb-6 md:mb-0">
                   <label
                     class="uppercase tracking-wide text-darkBlue text-xs font-bold mb-2 w-full"
                     for="grid-diff"
@@ -389,7 +313,7 @@
         </div>
       </div>
     </section>
-    <footer class="bg-[#0f6d6d] text-white py-2">
+    <footer class="bg-[#0f6d6d] text-white py-2 static bottom-0 left-0 w-full">
       <div class="footer">
         <div class="row">
           <a href="#" id="linkedin"><i class="fab fa-linkedin"></i></a>
@@ -400,10 +324,10 @@
 
         <div class="row">
           <ul>
-            <li><a href="#">Contact us</a></li>
-            <li><a href="#">About us</a></li>
-            <li><a href="#">FAQ</a></li>
-            <li><a href="#">Career</a></li>
+            <li><a href="./about.html">About us</a></li>
+            <li><a href="./contact.html">Contact us</a></li>
+            <li><a href="./faq.html">FAQ</a></li>
+            <li><a href="./ambassador.html">Ambassador Program </a></li>
           </ul>
         </div>
 
