--- a/pages/contact.html
+++ b/pages/contact.html
@@ -48,7 +48,7 @@
         </a>
       </div>
       <div
-        class="hidden container ml-36 flex-row items-center justify-center space-x-8 md:flex max-w-1/3"
+        class="hidden container ml-6 flex-row items-center justify-center space-x-10 md:flex max-w-1/3"
       >
         <a href="./about.html" class="link">About</a>
         <a href="#" class="link">Resource</a>
@@ -76,7 +76,7 @@
         <!-- <button class="rounded-md border border-black  px-4 py-1 text-center effect effect-5" id="button">Apply</button> -->
         <a
           href="./apply.html"
-          class="cursor-pointer border-textBlue border flex justify-center items-center font-medium rounded-md hover:bg-accent text-textBlue text-xs shrink-0 py-2 px-2 md:py-2 md:px-4 md:text-sm"
+          class="cursor-pointer border-gray-200 border flex justify-center items-center font-medium rounded-md hover:bg-accent text-black text-xs shrink-0 py-2 px-2 md:py-2 md:px-4 md:text-sm"
         >
           Apply
         </a>
@@ -115,7 +115,7 @@
       </div>
     </section>
     <section
-      class="h-auto py-10 md:h-[590px] px-2 relative mb-12 md:mt-0 mt-12"
+      class="h-auto py-10 md:h-[590px] px-2 relative mb-20 md:mt-0 mt-12"
     >
       <div
         class="h-full w-full flex flex-col gap-4 justify-between md:flex-row md:absolute right-4"
@@ -277,7 +277,7 @@
         </div>
       </div>
     </section>
-    <!-- <footer class="bg-[#0f6d6d] text-white py-2">
+    <footer class="bg-[#0f6d6d] text-white py-2 static bottom-0 left-0 w-full">
       <div class="footer">
         <div class="row">
           <a href="#" id="linkedin"><i class="fab fa-linkedin"></i></a>
@@ -288,17 +288,16 @@
 
         <div class="row">
           <ul>
-            <li><a href="#">Contact us</a></li>
-            <li><a href="#">About us</a></li>
-            <li><a href="#">FAQ</a></li>
-            <li><a href="#">Career</a></li>
+            <li><a href="./about.html">About us</a></li>
+            <li><a href="./contact.html">Contact us</a></li>
+            <li><a href="./faq.html">FAQ</a></li>
+            <li><a href="./ambassador.html">Ambassador Program </a></li>
           </ul>
         </div>
 
         <div class="row">Seedsnitch Copyright © 2023 All rights reserved</div>
       </div>
-    </footer> -->
-
+    </footer>
     <script>
       var x = document.getElementById("navbar");
       window.onscroll = function () {
