--- a/pages/faq.html
+++ b/pages/faq.html
@@ -43,7 +43,7 @@
         </a>
       </div>
       <div
-        class="hidden container ml-36 flex-row items-center justify-center space-x-8 md:flex max-w-1/3"
+        class="hidden container ml-6 flex-row items-center justify-center space-x-10 md:flex max-w-1/3"
       >
         <a href="./about.html" class="link">About</a>
         <a href="#" class="link">Resource</a>
@@ -51,18 +51,18 @@
         <a href="./faq.html" class="link">FAQ</a>
       </div>
       <!-- <button id="menu-btn" class="block hamburger md:hidden focus:outline-none">
-  <span class="hamburger-top"></span>
-  <span class="hamburger-middle"></span>
-  <span class="hamburger-bottom"></span>
+<span class="hamburger-top"></span>
+<span class="hamburger-middle"></span>
+<span class="hamburger-bottom"></span>
 </button> -->
       <!-- </div> -->
 
       <!-- <div class="md:hidden">
-  <div id="menu"
-    class="absolute flex-col items-center hidden self-end py-8 mt-10 space-y-6 font-bold  sm:w-min-3xl sm:self-center px-8 right-6 drop-shadow-md bg-cardColor text-overlay">
-    <a href="#" id="projectLink" class="hover:text-darkGrayishBlue link">Projects</a>
-    <a href="#" class="hover:text-darkGrayishBlue link">About</a>
-    <a href="#" class="hover:text-darkGrayishBlue link">Contact</a>
+<div id="menu"
+  class="absolute flex-col items-center hidden self-end py-8 mt-10 space-y-6 font-bold  sm:w-min-3xl sm:self-center px-8 right-6 drop-shadow-md bg-cardColor text-overlay">
+  <a href="#" id="projectLink" class="hover:text-darkGrayishBlue link">Projects</a>
+  <a href="#" class="hover:text-darkGrayishBlue link">About</a>
+  <a href="#" class="hover:text-darkGrayishBlue link">Contact</a>
 </div> -->
 
       <div
@@ -71,7 +71,7 @@
         <!-- <button class="rounded-md border border-black  px-4 py-1 text-center effect effect-5" id="button">Apply</button> -->
         <a
           href="./apply.html"
-          class="cursor-pointer border-textBlue border flex justify-center items-center font-medium rounded-md hover:bg-accent text-textBlue text-xs shrink-0 py-2 px-2 md:py-2 md:px-4 md:text-sm"
+          class="cursor-pointer border-gray-200 border flex justify-center items-center font-medium rounded-md hover:bg-accent text-black text-xs shrink-0 py-2 px-2 md:py-2 md:px-4 md:text-sm"
         >
           Apply
         </a>
@@ -85,15 +85,20 @@
     </nav>
 
     <section id="faq">
-      <div id="faq" class="faq-body">
-        <img src="../img/faq.jpg" id="faq-image" class="md:pt-12" alt="" />
-        <!-- <div class="faq-header">
-          <h3 class="faq-title font-body">FAQ's</h3>
-          <div class="seperator"></div>
-        </div> -->
+      <div
+        id="faq"
+        class="mt-20 mx-auto faq-body gap-x-8 h-[auto] flex flex-col items-center justify-center px-4 md:px-0 md:gap-x-16 w-full md:max-w-[70em]"
+      >
+        <img
+          src="../img/faq.jpg"
+          id="faq-image"
+          class="md:pt-12 min-w-200px"
+          alt=""
+        />
+
         <div class="faq-list">
-          <div>
-            <details>
+          <div class="md:w-auto w-full">
+            <details class="">
               <summary>Is there a deadline to apply?</summary>
               <p class="faq-content">
                 We do not have a specific deadline to apply, and we accept
@@ -170,10 +175,10 @@
         </div>
       </div>
     </section>
-    <footer class="bg-[#0f6d6d] text-white py-2">
+    <!-- <footer class="bg-[#0f6d6d] text-white py-2 static bottom-0 left-0 w-full">
       <div class="footer">
         <div class="row">
-          <a href="#" id=""><i class="fab fa-linkedin"></i></a>
+          <a href="#" id="linkedin"><i class="fab fa-linkedin"></i></a>
           <a href="#" id="instagram"><i class="fab fa-instagram"></i></a>
           <a href="#" id="youtube"><i class="fab fa-youtube"></i></a>
           <a href="#" id="twitter"><i class="fab fa-twitter"></i></a>
@@ -181,18 +186,16 @@
 
         <div class="row">
           <ul>
-            <li><a href="#">Contact us</a></li>
-            <li><a href="#">About us</a></li>
-            <li><a href="#">FAQ</a></li>
-            <!-- <li><a href="#">Terms & Conditions</a></li> -->
-            <li><a href="#">Career</a></li>
+            <li><a href="./about.html">About us</a></li>
+            <li><a href="./contact.html">Contact us</a></li>
+            <li><a href="./faq.html">FAQ</a></li>
+            <li><a href="./ambassador.html">Ambassador Program </a></li>
           </ul>
         </div>
 
         <div class="row">Seedsnitch Copyright © 2023 All rights reserved</div>
       </div>
-    </footer>
-
+    </footer> -->
     <script>
       var x = document.getElementById("navbar");
       window.onscroll = function () {
